<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Weixin5.2.1Layout</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="actionbar_weixin">微信</string>
    <string name="actionbar_search">搜索</string>
    <string name="actionbar_add">添加</string>
    <string name="actionbar_more">更多</string>
    <string name="banner_chat">聊天</string>
    <string name="banner_find">发现</string>
    <string name="banner_contact">通讯录</string>
</resources>
