<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/banner_bg"
    android:layout_height="40dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/banner_ll_chat"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/banner_tv_chat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/banner_chat"
                android:textColor="@color/banner_text_active" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/banner_ll_find"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/banner_tv_find"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/banner_find"
                android:textColor="@color/banner_text_normal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/banner_ll_contact"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/banner_tv_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/banner_contact"
                android:textColor="@color/banner_text_normal" />

        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/banner_tabline"
        android:layout_width="100dp"
        android:layout_height="3dp"
        android:background="@drawable/tabline" />
</LinearLayout>